--- a/webapp/privado/cliente/Cesta.xhtml
+++ b/webapp/privado/cliente/Cesta.xhtml
@@ -13,96 +13,70 @@
                 <div class="p-grid p-jc-center p-mt-2">
                     <div class="p-col-10" style="">
                         <div class="p-d-flex p-jc-center">
+
                             <div class="p-col-6 p-my-0">
                                 <h2 class="p-mt-0">
                                     Cesta
                                 </h2>
                                 <div class="p-grid p-ml-6">
-                                    <p:card class="p-my-2">
-                                        <div class="p-grid " style=" ">
-                                            <div class="p-col-5" style=" ">
-                                                <img alt="imagen" src="https://www.ikea.com/global/assets/navigation/images/fabric-sofas-10661.jpeg?imwidth=300" width="100%" />
-                                            </div>
-                                            <div class="p-col-6" style=" ">
-                                                <h2 class="p-my-0">
-                                                    Nombre Producto
-                                                </h2>
-                                                <h3 class="p-my-0">
-                                                    descripcion
-                                                </h3>
-                                                <h3 class="p-my-0">
-                                                    3000€
-                                                </h3>
-                                                <h3 class="p-my-0">
-                                                    Cantidad: 1
-                                                </h3>
 
-                                            </div>
-                                            <p:commandButton class="p-ml-3"  icon="pi pi-times" styleClass="rounded-button ui-button-danger ui-button-flat" />
+                                    <p:outputPanel id="text" >
+                                        <p:autoUpdate></p:autoUpdate>
+                                        <div >
+                                            <p:repeat id="h" value="#{cestaController.cestaUsuarioActivo}" var="itemCesta">
 
-                                        </div>
-                                    </p:card>
-                                    <p:card class="p-my-2">
-                                        <div class="p-grid " style=" ">
-                                            <div class="p-col-5" style=" ">
-                                                <img alt="imagen" src="https://www.ikea.com/global/assets/navigation/images/fabric-sofas-10661.jpeg?imwidth=300" width="100%" />
-                                            </div>
-                                            <div class="p-col-6" style=" ">
-                                                <h2 class="p-my-0">
-                                                    Nombre Producto
-                                                </h2>
-                                                <h3 class="p-my-0">
-                                                    descripcion
-                                                </h3>
-                                                <h3 class="p-my-0">
-                                                    3000€
-                                                </h3>
-                                                <h3 class="p-my-0">
-                                                    Cantidad: 1
-                                                </h3>
+                                                <p:card class="p-my-2 p-mr-2" style="max-width: 40em">
+                                                    <div class="p-d-flex" >
+                                                        <div >
+                                                            <img alt="imagenProducto" src="#{itemCesta.UPC.mainImageUrl}" width="60%" />
 
-                                            </div>
-                                            <p:commandButton class="p-ml-3"  icon="pi pi-times" styleClass="rounded-button ui-button-danger ui-button-flat" />
+                                                        </div>
+                                                        <div class="p-col-6" style=" ">
+                                                            <h2 class="p-my-0">
+                                                                <span>  #{itemCesta.UPC.name}</span><span style="float:right;">#{itemCesta.UPC.priceNumeral} #{itemCesta.UPC.pricesuffix}</span>
 
-                                        </div>
-                                    </p:card>
-                                    <p:card class="p-my-2">
-                                        <div class="p-grid " style=" ">
-                                            <div class="p-col-5" style=" ">
-                                                <img alt="imagen" src="https://www.ikea.com/global/assets/navigation/images/fabric-sofas-10661.jpeg?imwidth=300" width="100%" />
-                                            </div>
-                                            <div class="p-col-6" style=" ">
-                                                <h2 class="p-my-0">
-                                                    Nombre Producto
-                                                </h2>
-                                                <h3 class="p-my-0">
-                                                    descripcion
-                                                </h3>
-                                                <h3 class="p-my-0">
-                                                    3000€
-                                                </h3>
-                                                <h3 class="p-my-0">
-                                                    Cantidad: 1
-                                                </h3>
+                                                            </h2><br></br>
+                                                            <p class="p-my-0">
+                                                                #{itemCesta.UPC.mainImageAlt}
+                                                            </p><br></br><br></br>
 
-                                            </div>
-                                            <p:commandButton class="p-ml-3"  icon="pi pi-times" styleClass="rounded-button ui-button-danger ui-button-flat" />
+                                                            <h:form>
 
-                                        </div>
-                                    </p:card>
 
+
+                                                                <div style="float: right; display: inline" >
+                                                                    <p:spinner style="width: 7em;" id="ajaxSpinner" value="#{itemCesta.cantidad}"   buttons="horizontal-after" upButtonStyleClass="rounded-button ui-button-flat" downButtonStyleClass="rounded-button  ui-button-flat" >
+                                                                        <p:ajax listener="#{cestaController.calcularSubtotal()}" update="@none" process="@this, ajaxSpinner" />
+                                                                    </p:spinner>
+                                                                </div>
+
+                                                            </h:form>
+
+                                                        </div>
+                                                        <p:commandButton class="p-ml-3"  icon="pi pi-times" action="#{cestaController.eliminarDeCesta(itemCesta)}" styleClass="rounded-button ui-button-danger ui-button-flat" />
+
+                                                    </div>
+                                                </p:card>
+                                            </p:repeat>
+
+
+                                        </div>                   
+                                    </p:outputPanel>
 
 
                                 </div>
                             </div>
+
+
                             <div class="p-col-6" style="">
                                 <div  style="">
-                                    <p:card class="p-mx-1 p-as-center p-my-2" style="width: 30rem">
-                                        <h2 class="p-mt-0 p-mb-0">
-                                            <span>Subtotal</span> <span style="float:right;">100.2€</span>
-                                        </h2>
-                                    </p:card>
 
+                                    <p:card class="p-mx-1 p-as-center p-my-2" style="width: 30rem;">
+                                           <p:outputPanel>  <p:autoUpdate/>
+                                               <h2><span>Subtotal</span>  <span style="float: right">                                       
+                                                #{cestaController.subtotal}
+                                            </span> </h2></p:outputPanel>
+                                    </p:card>
 
                                     <p:sidebar widgetVar="sidebarRightDirecciones" position="right" style="width:30rem">
                                         <div class="p-grid p-jc-center p-mt-6">
@@ -222,10 +196,10 @@
                                                         <div class="p-col">
                                                             <div class="box">
                                                                 <p:selectOneMenu class="p-ml-1" required="true" requiredMessage="Método de envío es un campo obligatorio" id="metodoEnvio">
-                                           <f:selectItem itemLabel="Standard" itemValue="Standard"></f:selectItem>
-                                            <f:selectItem itemLabel="Express" itemValue="Express"></f:selectItem>
-                                            <f:selectItem itemLabel="Premium" itemValue="Premium"></f:selectItem>
-                                                                    
+                                                                    <f:selectItem itemLabel="Standard" itemValue="Standard"></f:selectItem>
+                                                                    <f:selectItem itemLabel="Express" itemValue="Express"></f:selectItem>
+                                                                    <f:selectItem itemLabel="Premium" itemValue="Premium"></f:selectItem>
+
                                                                 </p:selectOneMenu>
 
                                                             </div>
