--- a/webapp/index.xhtml
+++ b/webapp/index.xhtml
@@ -1,15 +1,30 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <h:outputStylesheet library="css" name="default.css"/>
+        <h:outputStylesheet library="css" name="cssLayout.css"/>
+        <h:outputStylesheet library="webjars" name="primeflex/2.0.0/primeflex.min.css" />
         <title>IKEA 2</title>
     </h:head>
     <h:body>
-        Página de bienvenida
-       <h:button outcome="/publico/Principal.xhtml" value="Comenzar" />
-     
+
+        <div class="p-d-flex p-grid p-jc-center" style="height: 60vh;">
+            <div class="p-as-center">
+                <h2 class="p-mb-3">
+                    Bienvenido a IKEA 2
+                </h2>
+                
+                <p:button outcome="/publico/Principal.xhtml" value="Comenzar" styleClass="ui-button-outlined" style="width: 100%"/>
+            </div>
+        </div>
+
+
     </h:body>
 </html>
 
