--- a/webapp/privado/cliente/Cesta.xhtml
+++ b/webapp/privado/cliente/Cesta.xhtml
@@ -123,7 +123,7 @@
 
                                     </p:sidebar>
 
-                                    <p:fieldset legend="Direcciones" toggleable="true" toggleSpeed="500" style="width: 30rem"  class="p-mx-1 p-as-center p-my-2">
+                                    <p:fieldset legend="Direcciones" toggleable="true" toggleSpeed="500" style="width: 30rem" collapsed="true" class="p-mx-1 p-as-center p-my-2">
                                         <div class="p-grid p-ml-6">
                                             <p:outputPanel id="teext" >
                                                 <p:autoUpdate></p:autoUpdate>
