--- a/webapp/publico/LogIn.xhtml
+++ b/webapp/publico/LogIn.xhtml
@@ -18,11 +18,6 @@
 
             <ui:define name="content">
                 
-                
-
-
-
-
                 <div class="p-grid p-jc-start p-ai-center" style="height: 95vh;">
                     <div class="p-col-5 p-d-flex" style="background-color:lightskyblue;height: 100%;">
                         <div class="p-mx-6 p-as-center">
@@ -88,6 +83,8 @@
 
 
                                     </div>
+                                                                        <p:growl id="mensajes" showDetail="true"/>
+
                                     <div class="p-col">
                                         <div class="box">
                                             <p:commandButton id="loginButton" value="Login" ajax="false"
